# cookiecutter-python-library

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.app_name}}/: .drone.yml  .pre-commit-config.yaml  Makefile  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.app_name}}/docs/sphinx/: conf.py  index.rst
{{cookiecutter.app_name}}/lib/{{cookiecutter.app_name}}/: __init__.py  logging_config.py  release.py
{{cookiecutter.app_name}}/tests/units/: test_release.py
