[aliases]
test=pytest

[metadata]
description-file = README.md

[flake8]
max-line-length = 88
exclude = .git,.hg,.svn,test,setup.py,__pycache__
ignore = B006

[isort]
line_length=88
known_future_library=future,pies
known_standard_library=std,std2
known_third_party=
known_first_party={{cookiecutter.app_name}}
indent='    '
include_trailing_comma=True
multi_line_output=3
length_sort=1
#forced_separate=django.contrib,django.utils
default_section=FIRSTPARTY
no_lines_before=LOCALFOLDER
