[aliases]
test=pytest

[metadata]
description-file = README.md

[flake8]
max-line-length = 88
exclude = .git,.hg,.svn,test,setup.py,__pycache__
ignore = B006,W503

[isort]
line_length=88
known_future_library=future,pies
known_standard_library=std,std2
known_third_party=
known_first_party=
indent='    '
include_trailing_comma=True
multi_line_output=3
length_sort=1
#forced_separate=django.contrib,django.utils
default_section=FIRSTPARTY
no_lines_before=LOCALFOLDER

### Coverage settings (equivalent to .coveragerc)
[coverage:run]
# Only run coverage on our source code not on 3rd party libs
source = .
omit = .tox/*
       setup.py
       **conftest.py
branch = True
concurrency = multiprocessing
parallel = True
data_file = tests/results/coverage

[coverage:report]
# Fail if coverage is <70%
fail_under=70
# https://stackoverflow.com/questions/9202723/excluding-abstractproperties-from-coverage-reports
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

   # Don't complain if tests don't hit defensive assertion code:
    raise NotImplementedError

